fix spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -592,8 +592,8 @@ a.hoverline:hover {
 }
 
 .image-container1 img {
-  max-width: 33%;
-  max-height: 33%;
+  max-width: 32%;
+  max-height: 32%;
 }
 
 .image-container2 {
@@ -604,8 +604,8 @@ a.hoverline:hover {
 }
 
 .image-container2 img {
-  max-width: 70%;
-  max-height: 70%;
+  max-width: 69%;
+  max-height: 69%;
 }
 
 #contact a:not(.btn-floating) {
